<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Edification Gateway</string>
    <string name="ch" translatable="false">choose_your_stream_of_search</string>
    <string name="jindal_global_law_school_sonipat">Jindal Global Law School, Sonipat</string>
    <string name="gujarat_national_law_university_gandhinagar">Gujarat National Law University, Gandhinagar</string>
    <string name="national_law_institute_university_bhopal">National Law Institute University, Bhopal</string>
    <string name="rajiv_gandhi_national_university_of_law_patiala">Rajiv Gandhi National University of Law, Patiala</string>
    <string name="faculty_of_law_university_of_delhi_delhi">Faculty of Law, University of Delhi, Delhi</string>
    <string name="click_here_to_know_more">click here to know more…</string>
    <string name="national_law_university_jodhpur">National Law University, Jodhpur</string>
    <string name="rajiv_gandhi_school_of_intellectual_property_law_indian_institute_of_technology_kharagpur">
Rajiv Gandhi School of Intellectual Property Law, Indian Institute of Technology, Kharagpur
</string>
    <string name="nalsar_university_of_law_hyderabad">NALSAR University of Law, Hyderabad</string>
    <string name="national_law_university_new_delhi">National Law University, New Delhi</string>
    <string name="national_law_school_of_india_university_bangalore">National Law School of India University, Bangalore</string>
    <string name="top_10_law_clg">TOP 10 LAW CLG</string>
    <string name="law_institutes">LAW INSTITUTES</string>
    <string name="click_here_to_know_more_">click here to know more…</string>
    <string name="sri_ramachandra_medical_college_and_research_institute_chennai">
Sri Ramachandra Medical College and Research Institute, Chennai
</string>
    <string name="jawaharlal_nehru_medical_college_aligarh">Jawaharlal Nehru Medical College, Aligarh</string>
    <string name="institute_of_liver_and_biliary_sciences_new_delhi">Institute of Liver and Biliary Sciences, New Delhi</string>
    <string name="bhu_varanasi">BHU Varanasi</string>
    <string name="jipmer_puducherry">JIPMER Puducherry</string>
    <string name="king_george_s_medical_university_lucknow">King George’s Medical University, Lucknow</string>
    <string name="kasturba_medical_college_manipal">Kasturba Medical College, Manipal</string>
    <string name="christian_medical_college_vellore">Christian Medical College, Vellore</string>
    <string name="pgimer_chandigarh">PGIMER, Chandigarh</string>
    <string name="aiims_new_delhi">AIIMS New Delhi</string>
    <string name="top_10_medical_clg">TOP 10 MEDICAL CLG</string>
    <string name="medical_institutes">MEDICAL INSTITUTES</string>
    <string name="click_here_to_know_more_about_medical">click here to know more about medical</string>
    <string name="click_here_to_know_more_about_law">click here to know more about law</string>
    <string name="click_here_to_know_more_about_eng">click here to know more about eng…</string>
    <string name="click_here_to_know_more_about_arts">click here to know more about arts…</string>
    <string name="madras_christian_college_chennai">Madras Christian College, Chennai</string>
    <string name="ramjas_college_delhi">Ramjas College, Delhi</string>
    <string name="hindu_college_new_delhi">. Hindu College, New Delhi</string>
    <string name="shri_ram_college_of_commerce_delhi">Shri Ram College of Commerce, Delhi</string>
    <string name="hansraj_college_delhi">Hansraj College, Delhi</string>
    <string name="miranda_house_new_delhi">Miranda House, New Delhi</string>
    <string name="st_xavier_s_college_mumbai">St. Xavier\'s College, Mumbai</string>
    <string name="christ_university_bangalore">Christ University, Bangalore</string>
    <string name="loyola_college_chennai">Loyola College, Chennai</string>
    <string name="lady_shri_ram_college_lsr_for_women_new_delhi">Lady Shri Ram College (LSR) for Women, New Delhi</string>
    <string name="top_10_arts_clg">TOP 10 ARTS CLG</string>
    <string name="arts_institutes">ARTS INSTITUTES</string>
    <string name="arts">Arts</string>
    <string name="law">law</string>
    <string name="medicine">medicine</string>
    <string name="engineering">engineering</string>
    <string name="top_institutions">Top Institutions</string>
    <string name="engineering_institutes">ENGINEERING INSTITUTES</string>
    <string name="top_10_engineering_clg">TOP 10 ENGINEERING CLG</string>
    <string name="indian_institute_of_technology_madras">Indian Institute of Technology Madras</string>
    <string name="indian_institute_of_technology_bombay">Indian Institute of Technology Bombay</string>
    <string name="indian_institute_of_technology_kharagpur">Indian Institute of Technology Kharagpur</string>
    <string name="indian_institute_of_technology_delhi">Indian Institute of Technology Delhi</string>
    <string name="indian_institute_of_technology_kanpur">Indian Institute of Technology Kanpur</string>
    <string name="indian_institute_of_technology_roorkee">Indian Institute of Technology Roorkee</string>
    <string name="indian_institute_of_technology_guwahati">Indian Institute of Technology Guwahati</string>
    <string name="anna_university">Anna University</string>
    <string name="jadavpur_university">Jadavpur University</string>
    <string name="indian_institute_of_technology_hyderabad">Indian Institute of Technology Hyderabad</string>
    <string name="edification_gateway">Edification Gateway</string>
    <string name="choose_your_stream_of_search">Choose your Stream of Search</string>
    <string name="area_of_interest">Area of Interest</string>
    <string name="qualification">Qualification</string>
    <string name="competative_exams">competitive exams</string>
    <string name="Top_institutions">Top institutions</string>
    <string name="select_your_education_qualification_you_have_completed">
Select Your Education Qualification you have completed
</string>
    <string name="_10th_std">10th std</string>
    <string name="_12th_std">12th std</string>
    <string name="ug_engineering">UG engineering</string>
    <string name="start">Start</string>
    <string name="choose_your_interested">CHOOSE YOUR INTERESTED</string>
    <string name="pg_courses">PG COURSES</string>
    <string name="engineering_course">Engineering course</string>
    <string name="medicine_course">medicine course</string>
    <string name="select_your_course">select your course</string>
    <string name="Select_your_course">Select you course</string>
    <string name="engineering_courses_in_india">Engineering_courses_in_india</string>
    <string name="science">SCIENCE</string>
    <string name="arts_course">ARTS course</string>
    <string name="commerce">COMMERCE</string>
    <string name="_3_d_animation_and_graphics">3-D ANIMATION AND GRAPHICS</string>
    <string name="aircraft_maintence_engineering">AIRCRAFT MAINTENCE ENGINEERING</string>
    <string name="aeronautical_engineering">AERONAUTICAL ENGINEERING</string>
    <string name="agriculture_engineering">AGRICULTURE ENGINEERING</string>
    <string name="aero_space_engineering">AERO SPACE ENGINEERING</string>
    <string name="automation">AUTOMATION</string>
    <string name="advanced_mechatronics_and_industrial">ADVANCED MECHATRONICS AND INDUSTRIAL</string>
    <string name="agricultural_and_food_engineering">Agricultural and Food Engineering</string>
    <string name="agricultural_and_irrigation_engineering">Agricultural and Irrigation Engineering</string>
    <string name="aircraft_manufacturing_and_maintenance_engineering">Aircraft Manufacturing and Maintenance Engineering</string>
    <string name="applied_electronics_and_instrumentation_engineering">
Applied Electronics and Instrumentation Engineering
</string>
    <string name="architecture_engineering">Architecture Engineering</string>
    <string name="automation_and_robotics">Automation and Robotics</string>
    <string name="automobile_engineering">Automobile Engineering</string>
    <string name="bio_engineering">Bio Engineering</string>
    <string name="diploma_in_food_and_beverage_services">Diploma in Food and Beverage Services</string>
    <string name="diploma_in_bakery_and_confectionary">Diploma in Bakery and Confectionary</string>
    <string name="diploma_in_craft_course_in_food_production">Diploma in Craft Course in Food Production</string>
    <string name="diploma_in_cookery">Diploma in Cookery</string>
    <string name="diploma_in_house_keeping">Diploma in House Keeping</string>
    <string name="diploma_in_restaurant_and_counter_service">Diploma in Restaurant and Counter Service</string>
    <string name="diploma_in_hotel_reception_and_book_keeping">Diploma in Hotel Reception and Book Keeping</string>
    <string name="hotel_and_hospitality_operations_management">Hotel and Hospitality Operations Management</string>
    <string name="diploma_in_architectural_assistantship">Diploma in Architectural Assistantship</string>
    <string name="diploma_in_automobile_engineering">Diploma in Automobile Engineering</string>
    <string name="diploma_in_chemical_engineering">Diploma in Chemical Engineering</string>
    <string name="diploma_in_civil_engineering">Diploma in Civil Engineering</string>
    <string name="diploma_in_computer_engineering">Diploma in Computer Engineering</string>
    <string name="diploma_in_computer_science_and_engineering">Diploma in Computer Science and Engineering</string>
    <string name="diploma_in_electrical_engineering">Diploma in Electrical Engineering</string>
    <string name="diploma_in_electronics_and_communication_engineering">Diploma in Electronics and Communication Engineering</string>
    <string name="diploma_in_electrical_and_electronics_engineering">Diploma in Electrical and Electronics Engineering</string>
    <string name="diploma_in_electronics">Diploma in Electronics</string>
    <string name="diploma_in_electronics_and_telecommunication_engineering">Diploma in Electronics and Telecommunication Engineering</string>
    <string name="diploma_in_fashion_design">Diploma in Fashion Design</string>
    <string name="diploma_in_food_technology">Diploma in Food Technology</string>
    <string name="diploma_in_garment_technology">Diploma in Garment Technology</string>
    <string name="diploma_in_information_technology">Diploma in Information Technology</string>
    <string name="diploma_in_instrumentation_technology">Diploma in Instrumentation Technology</string>
    <string name="diploma_in_interior_design_and_decoration">Diploma in Interior Design and Decoration</string>
    <string name="diploma_in_leather_technology">Diploma in Leather Technology</string>
    <string name="diploma_in_library_and_information_sciences">Diploma in Library and Information Sciences</string>
    <string name="diploma_in_mechanical_engineering">Diploma in Mechanical Engineering</string>
    <string name="diploma_in_marine_engineering">Diploma in Marine Engineering</string>
    <string name="diploma_in_medical_laboratory_technology">Diploma in Medical Laboratory Technology</string>
    <string name="diploma_in_plastic_technology">Diploma in Plastic Technology</string>
    <string name="diploma_in_production_and_industrial_engineering">Diploma in Production and Industrial Engineering</string>
    <string name="diploma_in_textile_design">Diploma in Textile Design</string>
    <string name="diploma_in_textile_processing">Diploma in Textile Processing</string>
    <string name="diploma_in_textile_technology">Diploma in Textile Technology</string>
    <string name="travel_and_tourism">Travel and Tourism</string>
    <string name="cosmetics_and_lifestyle_product_designing">Cosmetics and Lifestyle Product Designing</string>
    <string name="hair_and_skin_care">Hair and Skin Care</string>
</resources>