<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"
    tools:context=".dipolmaa">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"><TableRow>
        <TextView
            android:id="@+id/sciwjf"
            android:layout_width="340dp"
            android:layout_height="120dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="60dp"
            android:text="Diploma courses in india"
            android:textAlignment="center"
            android:textColor="@color/earthblue"
            android:textColorHighlight="#ecc5c0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="23dp" />
    </TableRow>

        <TableRow>
            <Button
                android:id="@+id/diploma01"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_food_and_beverage_services"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma02"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_bakery_and_confectionary"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma03"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_craft_course_in_food_production"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma04"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_cookery"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma05"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_house_keeping"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma06"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_restaurant_and_counter_service"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma07"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_hotel_reception_and_book_keeping"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma08"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/hotel_and_hospitality_operations_management"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma09"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_architectural_assistantship"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma010"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_automobile_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma011"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_chemical_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma012"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_civil_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma013"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_computer_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma014"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_computer_science_and_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma015"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_electrical_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma016"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_electronics_and_communication_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma017"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_electrical_and_electronics_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma018"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_electronics"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma019"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_electronics_and_telecommunication_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma020"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_fashion_design"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma021"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_food_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma022"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_garment_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma023"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_information_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma024"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_instrumentation_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma025"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_interior_design_and_decoration"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma026"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_leather_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma027"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_library_and_information_sciences"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma028"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_mechanical_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma029"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_marine_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma030"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_medical_laboratory_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma031"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_plastic_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma032"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_production_and_industrial_engineering"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma033"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_textile_design"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma034"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_textile_processing"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma035"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/diploma_in_textile_technology"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma036"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/travel_and_tourism"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma037"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/cosmetics_and_lifestyle_product_designing"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/diploma038"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:text="@string/hair_and_skin_care"/>
        </TableRow>
    </TableLayout>

</ScrollView>