<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texturepg1"
    tools:context=".clg_home">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/qualhome"
                android:layout_width="340dp"
                android:layout_height="90dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="60dp"
                android:text="@string/top_institutions"
                android:textAlignment="center"
                android:textColor="@color/earthblue"
                android:textColorHighlight="#ecc5c0"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="23dp" />
        </TableRow>


        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/engineering"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="110dp"
                android:layout_marginLeft="40dp"
                android:text="@string/engineering"
                android:background="@color/plumvelvet"
                android:textColor="@color/colorwhite"
                android:layout_marginEnd="110dp"
                android:layout_marginStart="40dp" />
        </TableRow>
        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/medicine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="110dp"
                android:layout_marginLeft="40dp"
                android:text="@string/medicine"
                android:background="@color/plumvelvet"
                android:textColor="@color/colorwhite"
                android:layout_marginEnd="110dp"
                android:layout_marginStart="40dp" />
        </TableRow>
        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/law"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="110dp"
                android:layout_marginLeft="40dp"
                android:background="@color/plumvelvet"
                android:textColor="@color/colorwhite"
                android:text="@string/law"
                android:layout_marginEnd="110dp"
                android:layout_marginStart="40dp" />
        </TableRow>
        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/arts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="110dp"
                android:layout_marginLeft="40dp"
                android:background="@color/plumvelvet"
                android:textColor="@color/colorwhite"
                android:text="@string/arts"
                android:layout_marginEnd="110dp"
                android:layout_marginStart="40dp" />
        </TableRow>
    </TableLayout>

</ScrollView>